kubernetes-manifest-file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: furniture-ingress
  namespace: three-tier
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - challenge.jaipurbestfurniture.shop
    secretName: furniture-tls-secret
  rules:
  - host: challenge.jaipurbestfurniture.shop
    http:
      paths:
      # Frontend
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80

      # Backend API
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 3000
